Corrected issue with assest not showing the correct paths, as well as fixed the issue with the menu__backdrop and btn__menu.

--- a/style.css
+++ b/style.css
@@ -54,10 +54,13 @@ header {
 .btn__menu {
 	background: transparent;
 	border: none;
-	font-size: 40px;
+	font-size: 60px;
 	text-align: center;
 	color: blueviolet;
 	display: none;
+}
+.fa-bars {
+	font-size: 32px;
 }
 .menu__backdrop {
 	background-color: black;
@@ -69,15 +72,19 @@ header {
 	z-index: 100;
 	justify-content: center;
 	align-items: center;
-	display: none;
+	visibility: hidden;
+	transition: all 300ms ease;
+	opacity: 0;
 }
 .menu--open {
 	overflow-y: hidden;
 	max-height: 100vh;
 }
 .menu--open .menu__backdrop {
-	display: flex;
+    visibility: visible;
+    opacity: 1;
 }
+
 .btn__menu--close {
 	position: absolute;
 	right: 20px;
@@ -86,13 +93,15 @@ header {
 	color: white;
 }
 .menu__list {
-padding: 32px 00;
+padding: 48px 0;
+}
+.menu__link {
+	color: white;
 }
 .menu__links {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: white;
 	font-size: 40px;
 }
 #landing {
@@ -184,7 +193,7 @@ html {
 }
 #highlights::before,
 #highlights::after {
-	background: url(/E-commerce/assets/wave.svg);
+	background: url(/assets/wave.svg);
 	content: "";	
 	width: 101vw;
 	height: 12vw;
@@ -297,7 +306,7 @@ html {
 }
 #latest::before,
 #latest::after {
-	background: url(/E-commerce/assets/wave.svg);
+	background: url(/assets/wave.svg);
 	content: "";	
 	width: 101vw;
 	height: 12vw;
@@ -335,6 +344,10 @@ footer {
 	filter: grayscale(1) invert(1);
 	margin-bottom: 24px;
 }
+.footer__logo--img:hover {
+	transform: translateY(-10px);
+	transition: all 1s ease;
+}
 .footer__copyright {
 	color: white;
 	margin-bottom: 4px;
@@ -351,9 +364,9 @@ filter: grayscale(1) invert(1);
 	.nav__link {
 		display: none;
 	}
-	.menu__backdrop {
-		display: flex;
-	}
+	.btn__menu {
+        display: flex;
+    }
 	h1 {
 		font-size: 32px;
 	}
